--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-vm-flower",
   "version": "0.1.2",
   "description": "React.js component to render a VM flower with SVG",
-  "main": "lib/index.js",
+  "main": "lib/flower.js",
   "scripts": {
     "lint": "coffeelint src/",
     "prepublish": "coffee -o lib/ -c src/",
