--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vm-flower",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "React.js component to render a VM flower with SVG",
   "main": "lib/flower.js",
   "scripts": {
@@ -24,13 +24,14 @@
   },
   "homepage": "https://github.com/flosse/react-vm-flower",
   "devDependencies": {
-    "chai": "^3.2.0",
-    "coffee-script": "^1.9.3",
-    "coffeelint": "^1.9.6",
-    "mocha": "^2.2.5"
+    "chai": "^3.5.0",
+    "coffee-script": "^1.12.5",
+    "coffeelint": "^1.16.0",
+    "mocha": "^3.2.0",
+    "react-dom": "^15.5.4"
   },
   "dependencies": {
-    "react": "^0.13.3",
+    "react": "^15.5.4",
     "react-pure-render": "^1.0.2"
   }
 }
